objects/LLC_BI__Legal_Entities__c.object
<CustomObject>
    <fields>
        <fullName>Burn_Down_Amount__c</fullName>
        <description>Burn down dollar amount</description>
        <label>Burn Down Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Burn_Down_Percentage__c</fullName>
        <description>Burn Down Rate</description>
        <label>Burn Down Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Burn_Down_Type__c</fullName>
        <description>Type of burn down rate</description>
        <label>Burn Down Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Commitment Amount</fullName>
                </value>
                <value>
                    <fullName>Outstanding Amount</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>